Android/app/src/main/java/com/example/baedal_baedal/fail/FailMyRecyclerInterface.kt
package com.example.baedal_baedal.fail

interface FailMyRecyclerInterface {
    fun onItemClicked(position: Int)
}